fix_truncated_tick

--- a/src/sass/app/trade.scss
+++ b/src/sass/app/trade.scss
@@ -1683,6 +1683,7 @@ ul.bullet {
                 left: 21px;
             }
             .table-view {
+                display: none;
                 background-color: var(--general-main-1);
             }
             table {
